--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <input type="submit" value="GO">
                     <input type="reset" value="Reset">
                 <p>OUTPUT<Br><textarea name="comment" readonly></textarea>
+                <p>ERROR<Br><textarea name="comment" readonly></textarea>
             </div>
             <!-- /sidebar -->
             <div id="sidebar">
